# py_mar26_fastapi

./: .env.sample  .gitignore  exceptions.py  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 4c22779e0768_add_hashed_password.py  4dcce8301150_add_task_and_project_models.py  9008e4b5cf44_initial.py
api/v1/: api.py  auth.py  projects.py  task.py  users.py
core/: config.py  security.py
crud/: project.py  task.py  user.py  users.py
db/: session.py
models/: __init__.py  project.py  task.py  user.py  users.py
schemas/: __init__.py  project.py  task.py  user.py
